--- a/public/html/index.ejs
+++ b/public/html/index.ejs
@@ -4,17 +4,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel=" stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css " integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous " referrerpolicy="no-referrer " >
+    <script src="https://kit.fontawesome.com/a58da105b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/index.css">
     <title>Domar</title>
 </head>
 <body>
 <nav class="container-fluid" id="navbar">
-    <div class="container">
         <p class="today">Today: Some date</p>
         <p class="date">April 2022</p>
-        <button type="button" class="btn btn-primary" id="login"><a  href="login">Log In</a></button>
-        <span class="dot" href="profile"></span>
-    </div>
+        <div class="logos">
+            <div class="tasks"><i class="fa-solid fa-check fa-2x"></i></div>
+            <div class="account"><a href="/login"> <i class="fa fa-user-o fa-2x"></i> </a></div>
+        </div>
 </nav>
 <div>
 
