--- a/public/html/register.ejs
+++ b/public/html/register.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/login.css">
-    <title>Log In</title>
+    <link rel="stylesheet" href="styles/register.css">
+    <title>Registration</title>
 </head>
 <body>
 <nav class="container-fluid" id="navbar">
@@ -21,11 +21,11 @@
 <div class="formes">
 
     <form action=" " class="regbox">
-        <h1 class="tittle">Log In</h1>
+        <h1 class="tittle">Registration</h1>
 
         <div class="row ">
             <div class="col-3 ">
-                <p class="labels">Email</p>
+                <p class="labels">Name</p>
             </div>
             <div class="col-8 ">
                 <input type="text " >
@@ -33,7 +33,15 @@
         </div>
         <div class="row ">
             <div class="col-3 ">
-                <p class="labels">Password</p>
+                <p class="labels">Surname</p>
+            </div>
+            <div class="col-8 ">
+                <input type="text " >
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-3 ">
+                <p class="labels">Email</p>
             </div>
             <div class="col-8 ">
                 <input type="text " >
@@ -44,8 +52,8 @@
             <div class="col-3 ">
             </div>
             <div class="col-8 " id="buttonholder">
-                <button class="signup"> <a href="/register" class="sign">Sign Up</a></button>
-                <button class="confirmbutton"> <a href="/" class="logn">Log In</a></button>
+                <button class="signup"> <a href="/login" class="sign">Log In</a></button>
+                <button class="confirmbutton"> <a href="/step2" class="logn">Sign Up</a></button>
             </div>
         </div>
 
