--- a/public/html/register.ejs
+++ b/public/html/register.ejs
@@ -47,6 +47,22 @@
                 <input type="text " >
             </div>
         </div>
+        <div class="row ">
+            <div class="col-3 ">
+                <p class="labels">Password</p>
+            </div>
+            <div class="col-8 ">
+                <input type="text " >
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-3 ">
+                <p class="labels">Repeat</p>
+            </div>
+            <div class="col-8 ">
+                <input type="text " >
+            </div>
+        </div>
 
         <div class="row " id="last">
             <div class="col-3 ">
