--- a/public/html/login.ejs
+++ b/public/html/login.ejs
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="container-fluid" id="navbar">
-    <p class="today">Today: Some date</p>
+    <a href="/" class="today">Today: Some date</a>
     <p class="date">April 2022</p>
     <div class="logos">
         <div class="tasks"><i class="fa-solid fa-check fa-2x"></i></div>
@@ -51,6 +51,5 @@
 
     </form>
 </div>
-
 </body>
 </html>
