--- a/public/html/index.ejs
+++ b/public/html/index.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="container-fluid" id="navbar">
-        <p class="today">Today: Some date</p>
+        <a class="today">Today: Some date</a>
         <p class="date">April 2022</p>
         <div class="logos">
             <div class="tasks"><i class="fa-solid fa-check fa-2x"></i></div>
