--- a/public/html/index.ejs
+++ b/public/html/index.ejs
@@ -7,6 +7,9 @@
     <link rel=" stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css " integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous " referrerpolicy="no-referrer " >
     <script src="https://kit.fontawesome.com/a58da105b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet " href="styles/calendar.js">
+<!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.css"/>-->
+<!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.midnight-blue.css"/>-->
     <title>Domar</title>
 </head>
 <body>
@@ -18,9 +21,10 @@
             <div class="account"><a href="/login"> <i class="fa fa-user-o fa-2x"></i> </a></div>
         </div>
 </nav>
-<div>
 
-<h1 class="review"> Calendar Will be Here</h1>
+<div id="app">
 </div>
+
+<script src="./js/calendar.js" type="module"></script>
 </body>
 </html>
