--- a/public/html/index.ejs
+++ b/public/html/index.ejs
@@ -1,30 +1,38 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel=" stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css " integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous " referrerpolicy="no-referrer " >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel=" stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css "
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous " referrerpolicy="no-referrer ">
     <script src="https://kit.fontawesome.com/a58da105b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet " href="styles/calendar.js">
-<!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.css"/>-->
-<!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.midnight-blue.css"/>-->
+    <link rel="stylesheet" href="styles/calendar.css">
+    <!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.css"/>-->
+    <!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.midnight-blue.css"/>-->
     <title>Domar</title>
 </head>
 <body>
 <nav class="container-fluid" id="navbar">
-        <a class="today">Today: Some date</a>
-        <p class="date">April 2022</p>
-        <div class="logos">
-            <div class="tasks"><i class="fa-solid fa-check fa-2x"></i></div>
-            <div class="account"><a href="/login"> <i class="fa fa-user-o fa-2x"></i> </a></div>
-        </div>
+    <a class="today">Today: Some date</a>
+    <div class="selectors">
+        <span id="previous-month-selector">	&#8592</span>
+        <p class="date" id="date">April 2022</p>
+        <span id="next-month-selector">&#8594</span>
+    </div>
+    <div class="logos">
+        <div class="tasks"><i class="fa-solid fa-check fa-2x"></i></div>
+        <div class="account"><a href="/login"> <i class="fa fa-user-o fa-2x"></i> </a></div>
+    </div>
 </nav>
 
 <div id="app">
 </div>
 
-<script src="./js/calendar.js" type="module"></script>
+<script type= "module" src="./js/calendar.js"></script>
 </body>
 </html>
