--- a/public/html/index.ejs
+++ b/public/html/index.ejs
@@ -34,5 +34,14 @@
 </div>
 
 <script type= "module" src="./js/calendar.js"></script>
+
+<form action="/" method="post">
+    <div class="damir">
+        <input type="text" name="sumarrys" placeholder="enter kriptu">
+        <input type="text" name="currency" placeholder="enter currency">
+        <button class="button" name="button"><h1>press me</h1></button>
+    </div>
+</form>
+
 </body>
 </html>
