--- a/public/html/register.ejs
+++ b/public/html/register.ejs
@@ -69,7 +69,7 @@
             </div>
             <div class="col-8 " id="buttonholder">
                 <button class="signup"> <a href="/login" class="sign">Log In</a></button>
-                <button type="submit" class="confirmbutton"> <a href="/step2" class="logn">Sign Up</a></button>
+                <button type="submit" class="confirmbutton"> <a href="/" class="logn">Sign Up</a></button>
             </div>
         </div>
 
