--- a/public/html/index.ejs
+++ b/public/html/index.ejs
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/a58da105b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/calendar.css">
+    <link rel="stylesheet" href="styles/api.css">
     <!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.css"/>-->
     <!--    <link rel="stylesheet" type="text/css" href="styles/evo-calendar.midnight-blue.css"/>-->
     <title>Domar</title>
@@ -37,9 +38,10 @@
 
 <form action="/" method="post">
     <div class="damir">
-        <input type="text" name="sumarrys" placeholder="enter kriptu">
-        <input type="text" name="currency" placeholder="enter currency">
-        <button class="button" name="button"><h1>press me</h1></button>
+        <h1 class="title">SEND DATA TO CALENDAR</h1>
+        <input type="text" name="sumarrys" placeholder="enter text">
+        <input type="text" name="currency" placeholder="enter text">
+        <button id="sendapibutton" class="button" name="button"><h1 id="sendapi">press me</h1></button>
     </div>
 </form>
 
